--- a/index.html
+++ b/index.html
@@ -59,10 +59,28 @@
     </section>
 
     <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>Bạn có thể thêm thông tin về bản thân tại đây.</p>
+        <div class="about-container">
+            <h2>About Me</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <h3>Quach Vi Cuong</h3>
+                    <p>
+                        Passionate .NET developer, eager to transform ideas into reality through code. My recent graduation and hands-on experience in various projects have sharpened my skills and fueled my drive to tackle real-world challenges. I'm committed to continuous learning and making a meaningful impact in the tech industry.
+                    </p>
+                    <ul class="details">
+                        <li><strong>Phone:</strong> 0865704933</li>
+                        <li><strong>Email:</strong> <a href="mailto:vicuongdev@gmail.com">vicuongdev@gmail.com</a></li>
+                        <li><strong>Location:</strong> Bien Hoa, Dong Nai</li>
+                        <li><strong>GitHub:</strong> <a href="https://github.com/vicuongdev06" target="_blank">vicuongdev06</a></li>
+                    </ul>
+                </div>
+                <div class="about-icon">
+                    <img src="images/giphy.gif" alt="Developer Icon">
+                </div>
+            </div>
+        </div>
     </section>
-        
+    
     <section id="skills" class="section">
         <h2>Skills</h2>
         <p>Thêm skills của ban.</p>
@@ -83,5 +101,7 @@
       AOS.init({offset:0});
     </script>
     <script src="script.js"></script>
+    <script>
+    </script>
 </body>
 </html>
